Updated the mail body

--- a/Claysys.Altra.ProcessListener/App.config
+++ b/Claysys.Altra.ProcessListener/App.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="TimePeriod" value="5000"/>
+    <add key="TimePeriod" value="900000"/>
     <add key="ProcessName" value="OpenSpan.Runtime"/>
     <add key="StatusACKMailID" value="vishnu.bose95@gmail.com"/>
     <add key="Host" value="smtp.1and1.com"/>
     <add key="FromMail" value="vishnu.bose@claysys.net"/>
     <add key="Password" value="V@bose5805"/>
+    <add key="ServerName" value="VB-Machine"/>
 
 
   </appSettings>
